Fix graph alignment bugs

--- a/src/pages/main/styles/main.scss
+++ b/src/pages/main/styles/main.scss
@@ -50,7 +50,7 @@
     }
 
     #cube * {
-        background-color: themed(text);
+        border: 1px solid themed(text);
     }
 }
 
@@ -175,60 +175,117 @@ button {
 }
 
 #graph {
-    display: flex;
+    display: grid;
     flex-grow: 1;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     border-radius: 10px;
+    perspective: none;
     perspective-origin: center;
     overflow: hidden;
 }
 
-#cube {
+#cube, #transform-cube {
+    grid-row-start: 1;
+    grid-column-start: 1;
     width: 70px;
     height: 70px;
-    position: relative;
-    transform: rotateX(25deg) rotateY(25deg);
+    transform: rotateX(-25deg) rotateY(-25deg);
     transform-style: preserve-3d;
-    z-index: 1;
+}
+
+#cube { 
+    z-index: 1; 
+}
+
+#transform-cube { 
+    z-index: 2; 
 }
 
 #cube * {
+    box-sizing: border-box;
+}
+
+#transform-cube * {
+    opacity: 60%;
+}
+
+#cube *, #transform-cube * {
     position: absolute;
     width: 70px;
     height: 70px;
-    opacity: 30%;
     color: white;
 }
 
-#cube-face-front { transform: translateZ(35px); }
-#cube-face-back   { transform: rotateY(180deg) translateZ(35px); }
-#cube-face-left   { transform: rotateY(-90deg) translateZ(35px); }
-#cube-face-right  { transform: rotateY(90deg) translateZ(35px); }
-#cube-face-top    { transform: rotateX(90deg) translateZ(35px); }
-#cube-face-bottom { transform: rotateX(-90deg) translateZ(35px); }
+#cube-face-front, #transform-cube-face-front { 
+    transform: translateZ(35px); 
+}
+
+#cube-face-back, #transform-cube-face-back  { 
+    transform: rotateY(180deg) translateZ(35px); 
+}
+
+#cube-face-left, #transform-cube-face-left  { 
+    transform: rotateY(-90deg) translateZ(35px); 
+}
+
+#cube-face-right, #transform-cube-face-right { 
+    transform: rotateY(90deg) translateZ(35px);
+}
+
+#cube-face-top, #transform-cube-face-top { 
+    transform: rotateX(90deg) translateZ(35px); 
+}
+
+#cube-face-bottom, #transform-cube-face-bottom { 
+    transform: rotateX(-90deg) translateZ(35px); 
+}
+
+#transform-cube-face-front { 
+    background-color: #0046ad;    
+}
+
+#transform-cube-face-back   { 
+    background-color: #009b48;
+}
+
+#transform-cube-face-left   { 
+    background-color: #ff5800;
+}
+
+#transform-cube-face-right  { 
+    background-color: #b71234; 
+}
+
+#transform-cube-face-top    { 
+    background-color: #ffd500;
+}
+
+#transform-cube-face-bottom { 
+    background-color: #ffffff;
+}
 
 #axes {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    transform: rotateX(25deg) rotateY(25deg);
+    grid-row-start: 1;
+    grid-column-start: 1;
     transform-style: preserve-3d;
+    transform: rotateX(-25deg) rotateY(-25deg);
     z-index: 0;
 }
 
 #x-axis {
     position: absolute;
-    width: 690px;
+    width: 5000px;
     height: 2px;
     background-color: red;
-    transform: rotateX(90deg);
 }
 
 #y-axis {
     position: absolute;
-    width: 690px;
+    width: 5000px;
     height: 2px;
     background-color: green;
     transform: rotateZ(90deg);
@@ -236,10 +293,10 @@ button {
 
 #z-axis {
     position: absolute;
-    width: 690px;
+    width: 5000px;
     height: 2px;
     background-color: blue;
-    transform: rotateY(90deg)
+    transform: rotateY(90deg);
 }
 
 #transforms {
